[gd_scene load_steps=8 format=3 uid="uid://cyjbd7rjt0flx"]

[ext_resource type="Script" path="res://Scenes/m_fish.gd" id="1_p10um"]
[ext_resource type="Texture2D" uid="uid://caibofkjj8lfe" path="res://assets/fish sprites/fish2.png" id="2_7b3ya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a7lv"]
size = Vector2(48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vur5"]
atlas = ExtResource("2_7b3ya")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w7hi"]
atlas = ExtResource("2_7b3ya")
region = Rect2(64, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ask2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vur5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w7hi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6bpl4"]
radius = 56.0357

[node name="M_fish" type="Area2D" groups=["enemy"]]
script = ExtResource("1_p10um")
maxSpeed = 150.0
maxSize = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_5a7lv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.499999, 4.76837e-07)
sprite_frames = SubResource("SpriteFrames_ask2r")
autoplay = "default"
frame_progress = 0.909706

[node name="detectionRadius" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionRadius"]
shape = SubResource("CircleShape2D_6bpl4")

[node name="speedRandomiseTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="playerDetectedTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="detectionRadius" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="speedRandomiseTimer" to="." method="_on_speed_randomise_timer_timeout"]
[connection signal="timeout" from="playerDetectedTimer" to="." method="_on_player_detected_timer_timeout"]
